# franka

./: .gitmodules  README.md  docker-compose.yaml
devel/: .catkin  .rosinstall  local_setup.fish  setup.sh
docker/: Dockerfile  requirements.txt
src/franka_softhand/franka_softhand_bringup/: CMakeLists.txt  package.xml
src/franka_softhand/franka_softhand_bringup/config/: camera_pose.yaml  franka_softhand.yaml
src/franka_softhand/franka_softhand_bringup/launch/: camera_in_scene.launch  franka_softhand.launch  franka_softhand_moveit.launch
src/franka_softhand/franka_softhand_bringup/scripts/: camera_in_scene.py
src/franka_softhand/franka_softhand_description/: package.xml
src/franka_softhand/franka_softhand_description/urdf/: franka_softhand.urdf.xacro
src/franka_softhand/franka_softhand_handeye/: CMakeLists.txt  package.xml
src/franka_softhand/franka_softhand_handeye/launch/: handeye_calibration.launch
src/franka_softhand/franka_softhand_handeye/urdf/: franka_softhand_handeye.urdf.xacro
src/franka_softhand/franka_softhand_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/franka_softhand/franka_softhand_moveit_config/config/: fake_controllers.yaml  franka_softhand.srdf  gazebo_franka_softhand.urdf  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
src/franka_softhand/franka_softhand_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
src/franka_softhand/franka_softhand_scene/: CMakeLists.txt  package.xml
src/franka_softhand/franka_softhand_scene/launch/: scene.launch
src/franka_softhand/franka_softhand_scene/scripts/: load_scene.py
