<?xml version="1.0"?>
<package format="2">
  <name>franka_softhand_handeye</name>
  <version>0.1.0</version>
  <description>
    Hand-eye (eye-to-hand) calibration setup for Franka Panda + qbSoftHand
    with an Intel RealSense D435i mounted at a fixed pose observing the robot.
    Provides URDF with the camera attached to world, a launch that brings up
    Franka + RealSense + MoveIt with the moveit_calibration RViz plugin.
  </description>

  <maintainer email="do.park@iit.it">Do Won Park</maintainer>
  <license>BSD</license>
  <author email="do.park@iit.it">Do Won Park</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>franka_softhand_description</exec_depend>
  <exec_depend>franka_softhand_bringup</exec_depend>
  <exec_depend>franka_softhand_moveit_config</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>realsense2_description</exec_depend>
  <exec_depend>moveit_calibration_gui</exec_depend>
  <exec_depend>moveit_calibration_plugins</exec_depend>
  <exec_depend>rviz</exec_depend>
</package>
