<?xml version="1.0"?>
<package format="2">
  <name>franka_softhand_scene</name>
  <version>0.1.0</version>
  <description>MoveIt planning-scene loader for Franka Panda + qbSoftHand. Istituto Italiano di Tecnologia.</description>
  <author email="do.park@iit.it">Do Won Park</author>
  <maintainer email="do.park@iit.it">Do Won Park</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>moveit_commander</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
